--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 .resume-contents {
@@ -17,13 +17,13 @@
 .left-section {
     grid-column: span 2;
     height: 100%;
-    background-color: #999999;
+    background-color: #00204a;
 }
 
 .right-section {
     grid-column: span 5;
     height: 100%;
-    background-color: #424a50;
+    background-color: #4b6982;
     border-radius: 0px 60px 0px 0px;
 }
 
@@ -44,12 +44,14 @@
 .name {
     color: #D6DBDF;
     font-size: 30px;
+    font-weight: 700;
     letter-spacing: 2px;
     text-transform: uppercase;
+    text-align: center;
 }
 
 .profession {
-    color: #eeeeee;
+    color: #FDB44B;
     font-size: 20px;
     text-transform: uppercase;
     text-align: center;
@@ -57,8 +59,9 @@
 
 /* .contact-info { border-bottom: 2px solid #1B2631; } */
 .left-title {
-    color: #eeeeee;
+    color: #FDB44B;
     font-size: 20px;
+    text-align: center;
 }
 
 .contact-info ul {
@@ -83,6 +86,7 @@
 }
 .skills ul li p {
     padding: .4rem 0;
+    margin-left: 15px ;
     color: #eeeeee;
 }
 
@@ -91,7 +95,11 @@
 }
 
 .right-title {
-    color: #eeeeee;
+    color: #6AC6C7;
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    margin-left: 50px;
 }
 
 .gap {
@@ -109,13 +117,21 @@
     grid-template-columns: repeat(2, 1fr);
     padding-bottom: 2rem;
     color: #F1F8FD;
+    margin-left: 50px;
+}
+.exp-company-empresa,
+.awards-company-name{
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
+    font-weight: 700;
+    color: #FDB44B;
 }
 
 .exp-company-name,
 .education-school-name,
+.awards-time-period
 .awards-company-name {
-    font-size: 25px;
-    font-weight: bold;
+    font-size: 18px;
 }
 
 .exp-time-period,
