--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@
     margin-left: 50px;
 }
 .exp-company-empresa,
+.exp-position,
+.awards-name,
 .awards-company-name{
     font-family: 'Roboto', sans-serif;
     font-size: 25px;
