--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@
 }
 
 .profile {
-    width: 100%;
-    border-bottom: 2px solid #eeeeee;
+    width: 80%;
+    margin-left: 25px;
+    border-bottom: 2px solid #1B2631;
 }
 
 .profile .profile-image {
