--- a/style.css
+++ b/style.css
@@ -161,4 +161,7 @@
 .awards-desc {
     font-size: 16px;
     padding-left: 5px;
+    letter-spacing: 1px;
+    line-height: 1.5rem;
+    border-left: 3px solid #a5a3a3;
 }
